examples/test/testpolicy14328.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14328
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key31: value47
      key0: value7
      key15: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value14
          key40: value20
      podSelector:
        matchLabels:
          key8: value19
          key0: value36
